# DemoCode

./: .gitignore  README.md  push.sh
CAProblem/: longest_palindrome.cpp
DS_Algo/algorithm/CAProblem/: maximum_subarray.cpp
DS_Algo/algorithm/Sort/: counting_sort.cpp  max_heap_sort.cpp  merge_sort.cpp  radix_sort.cpp
DS_Algo/dataStructure/tree/: AVL_tree.cpp  RB_tree.cpp
FileCrop/: base_task.h  col_task.h  date_task.cpp  task_dispatcher.cpp
MultiplexingIO/: client  mutiClient.cpp  mutiPlexingServer.cpp
algorithm_about/binary_tree/: max_heap.cpp
algorithm_about/sort_about/: counting_sort.cpp  quick_sort.cpp
convertservice/: CMakeLists.txt  convert_service.cpp  convert_service.h  convert_utils.h  lev_callback.cpp  lev_callback.h  lws_callback.cpp  lws_callback.h  main.cpp
convertservice/levservice/: cli_context.h  common_cmd.h  eddid_cricular_buffer.h  eddid_endian.h  eddid_initenv.h  ev_loop.cpp  main.cpp  service.h
convertservice/lwsclient/: CMakeLists.txt  lws_cb_interface.h  lws_client.cpp  lws_client.h  main.cpp  test.txt
convertservice/proto/: CMakeLists.txt  basic_info.proto  eddid.proto_header.proto  eddid.proto_quote_tick.proto  eddid.proto_symbol.proto  eddid.quote_basic_info.proto  eddid.quote_tick.proto  msg_carrier.proto  push.proto  query.proto  typedef.proto
convertservice/test/: lev_client.cpp
designPatterns/createdMode/: builder.cpp  factory_mode.cpp  singleton_mode.cpp
designPatterns/structuredMode/: adapter_mode.cpp  bridge_mode.cpp  composite_mode.cpp  flyweight_mode.cpp
design_patterns/createdMode/: prototype_mode.cpp  singleton_mode.cpp
design_patterns/structuredMode/: adapter_mode.cpp  bridge_mode.cpp  decorator_mode.cpp  facade_mode.cpp
epolltest/: client  epollServer.cpp  mutiClient.cpp  server
feedproxy/convertservice/: CMakeLists.txt  common_hdr.h  convert_service.cpp  convert_service.h  lws_callback.h  main.cpp
feedproxy/convertservice/test/: lev_client.cpp
feedproxy/levservice/: common_hdr.h  eddid_common.h
feedproxy/lwsclient/: CMakeLists.txt  main.cpp  test.txt
feedproxy/proto/: query.proto
feedproxy/public/: cli_context.h  eddid_functional.h  eddid_singleton.h  event_notify.h
feedproxy/uwsclient/: a  main.cpp  test_client.cpp  uws_client.cpp  uws_client.h  uws_client_multi_recon.h
fileCrop/: CMakeLists.txt  base_task.cpp
filecrop/: code_task.cpp  code_task.h  col_task.cpp  date_task.h  main.cpp  task_dispatcher.h
lock_free_queue/: lock_free_queue.hpp  lock_free_stack.hpp
lock_free_queue/test/: main.cpp
multiplexingIO/: multiplexing_io_server.cpp
mutiplex/: mutiPlexingServer.cpp  server
nano_log/: eddid_nano_logger.h
oiwST/: main.cpp  sql_server_wrapper.cpp  sql_server_wrapper.h
oiwst/: main.cpp  makefile  sql_server_wrapper.h  start.sh  table_struct.h
project_about/feedproxy/: .gitignore  CMakeLists.txt  README.md
project_about/feedproxy/convertservice/: CMakeLists.txt  convert_service.h  convert_utils.h  lev_callback.cpp  lev_callback.h
project_about/feedproxy/levservice/: ev_loop.h  main.cpp
project_about/feedproxy/logtest/: eddid_log_writer.h
project_about/feedproxy/lwsclient/: lws_client.cpp
project_about/feedproxy/proto/: msg_carrier.proto  push.proto  typedef.proto
project_about/feedproxy/public/: eddid_semlock.cpp  eddid_semlock.h  event_notify.h
project_about/feedproxy/uwsclient/: test_server.cpp  uclient  userver  uws_client.h  uws_client_multi.h
project_about/fileCrop/: CMakeLists.txt  base_task.cpp  base_task.h  code_task.cpp  code_task.h  col_task.cpp  col_task.h  date_task.cpp  date_task.h  task_dispatcher.cpp  task_dispatcher.h
project_about/oiwst/: sql_server_wrapper.cpp  table_struct.h  utils.h
sharedLibrary/: Makefile  call_code.cpp
third_party_about/dlopen/: raw_code.cpp
third_party_about/functional/: eddid_functional.h
third_party_about/kafka/: kafka_consumer_wrapper.hpp  kafka_producer_wrapper.hpp
third_party_about/pb_rpc/: client.cpp  server.cpp
third_party_about/pb_rpc/client/: pb_rpc_client.cpp  pb_rpc_client.h
third_party_about/redis/: redis_wrapper.hpp
third_party_about/rocksdb/: rocksdb_wrapper.hpp
third_party_about/websocket/: uws_client.hpp  uws_service.hpp  ws_client.hpp  ws_common.h  ws_proto.hpp
third_party_about/zookeeper/: zk_wrapper.hpp
tools/decode_encode/: octal_to_human.py
tools/http_send/: sug_as_http.py
uvworktest/: uv_work.cpp
websockets/: libwebsockets.cpp  main.cpp  web_socket_proto.hpp
zmqDemo/router-dealer/: zmq_dealer.cpp
zmqtest/: dealer  router  zmqRouter.cpp  zmqtest.cpp
(+9 files in other folders)
